hphp/test/zend7/Zend/tests/bug42817.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sbug42817.php on line 2